// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberOfPages display \`page\` if number_of_pages is 1 1`] = `
<DocumentFragment>
  <div>
    1 page
  </div>
</DocumentFragment>
`;

exports[`NumberOfPages renders empty if null 1`] = `<DocumentFragment />`;

exports[`NumberOfPages renders with number of pages 1`] = `
<DocumentFragment>
  <div>
    100 pages
  </div>
</DocumentFragment>
`;
